# armory

./: .dockerignore  .flake8  .gitattributes  .gitignore  .readthedocs.yaml  .travis.yml  .yamllint  CITATION.cff  CONTRIBUTING.md  Dockerfile  Dockerfile-pytorch  LICENSE  MANIFEST.in  README.md  README.txt  STYLE.md  armory-base-requirements.txt  build.out  dataset-build-requirements.txt  environment.yml  host-requirements-conda.sh  host-requirements.txt  integrate_tfds.py  mkdocs.yml  no-docker-reqs.txt  no-docker-requirements.txt  pyproject.toml  pytest.ini  req.txt  requirements.txt  run_evaluation.py  setup.cfg  setup.py  test-requirements.txt  test_crap.py  test_logs.py  update_armory_version.py
.github/: CONTRIBUTING.md  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml
.github/workflows/: 1-scan-lint-build.yml  2-test-stand-alone.yml  3-test-docker.yml  ci_test.yml  clear_space.sh  end2end_cron.yml  nightly_test.yml  release.yml  scan_and_lint.yml  scenario-evaluation-workflow.yml  scenario-runner.yml  scenario_eval.yml  self-hosted.yml  update_images.yml
armory/: __about__.py  __init__.py  __main__.py  arguments.py  cli.py  configuration.py  delayed_imports.py  environment.py  errors.py  experiment.py  logs.py  main_old.py  paths.py  version.py
armory/adapt/: pytorch.py  pytorch_models.py
armory/art.experimental/: __init__.py
armory/art_experimental/: __init__.py
armory/attacks/: librispeech_target_labels.py
armory/baseline_models/: __init__.py
armory/cli/: __init__.py  tools.py
armory/data/: README.md  __init__.py  adversarial_datasets.py  common.py  data.py  datasets.py  integrate_tfds.py  model_weights.py  percent_progress.py  progress_percentage.py  pytorch_loader.py  pytorch_loaders.py  template_boilerplate.py  tfds_checksum.py  utils.py
armory/datasets/: Dockerfile  README.md  art_wrapper.py  build.py  cached_datasets.json  common.py  config_load.py  context.py  download.py  filtering.py  generator.py  key_mapping.py  (+7 more)
docker/: .build.sh.swp  Dockerfile  Dockerfile-armory  Dockerfile-base  Dockerfile-carla-mot  Dockerfile-newpytorch  Dockerfile-pytorch  Dockerfile-pytorch-deepspeech  Dockerfile-tf2  Dockerfile-yolo  README.md  build-base.sh  build-core.sh  build-dev-minimal.sh  build-dev.sh  build-poison-dev.sh  build-poison.sh  build.py  build.sh  setup.sh  update_registry.sh
docs/: #getting_started.md#  CONTRIBUTING.md  adversarial_datasets.md  attacks.md  baseline_models.md  command_line.md  configuration_files.md  contributing.md  dataset_licensing.md  datasets.md  docker.md  exporting_data.md  external_repos.md  faqs.md  getting_started.md  index.md  instrumentation_example.md  instrumentation_examples.md  integrate_tensorflow_datasets.md  logging.md  metrics.md  no_docker_mode.md  poisoning.md  poisoning_object_detection.md  poisoning_witches_brew.md  probe.md  probe_hooking_notebook.md  scenarios.md  style.md  sweep_attacks.md  tfdsv4_placeholder.md  utils.md
eval_scripts/: carlini_wagner_attack_targeted.py  fgm_attack.py  pytorch_transform.py  transfer_attack.py
examples/: README.md  backdoor_poisoning.json  carlini_wagner_l2_targeted.json  carlini_wagner_linf_targeted.json  cifar_backdoor_poisoning.json  cifar_carlini_wagner_l2_targeted.json  cifar_carlini_wagner_linf_targeted.json  demo.py  eval_classifier.py  eval_classifier_all_delta.py  external_repo.json  fgm_attack.json  fgm_attack_binary_search.json  from_conf.py  mnist_config.json  mnist_fgm.json  mnist_fgm_all_epsilon.json  mnist_fgsm.json  mnist_fgsm_all_epsilon.json  private_eval.json  pytorch_transform.json  transfer_attack.json  transform_defense.json
launcher/: cli.py  launcher.py
notebooks/: Scenario Execution.ipynb  running_an_armory_notebook.ipynb  running_armory_scenarios_interactively.ipynb  running_armory_scenarios_interactively2.ipynb
outputs/: evaluation-results.json
performer_evaluation/: carlini_wagner_attack_targeted.py  fgm_all_epsilon.py  fgm_attack.py  fgsm_attack.py  poisoning_attack_backdoor.py  transfer_attack.py
scenario_configs/: apricot_frcnn.json  apricot_frcnn_defended.json  asr_deepspeech_baseline.json  asr_deepspeech_baseline_fgsm.json  asr_deepspeech_baseline_fgsm_channel.json  asr_deepspeech_baseline_kenansville.json  asr_deepspeech_defended_baseline_kenansville.json  asr_deepspeech_snr.json  asr_librispeech_entailment.json  asr_librispeech_targeted.json  audio_load_test.json  carla_multimodal_object_detection.json  carla_obj_det_adversarialpatch_defended.json  carla_obj_det_adversarialpatch_undefended.json  carla_obj_det_dpatch_defended.json  carla_obj_det_dpatch_undefended.json  carla_obj_det_multimodal_adversarialpatch_defended.json  carla_obj_det_multimodal_adversarialpatch_undefended.json  carla_obj_det_multimodal_dpatch_defended.json  carla_obj_det_multimodal_dpatch_undefended.json  carla_video_tracking.json  carla_video_tracking_goturn_advtextures_defended.json  carla_video_tracking_goturn_advtextures_undefended.json  cifar10_baseline.json  cifar10_defended_example.json  cifar10_poison_dlbd.json  cifar10_witches_brew.json  dapricot_frcnn.json  dapricot_frcnn_masked_pgd.json  deepspeech_baseline.json  gtsrb_scenario_baseline.json  gtsrb_scenario_baseline_pytorch.json  gtsrb_scenario_bullethole.json  gtsrb_scenario_clbd.json  gtsrb_scenario_clbd_bullethole.json  gtsrb_scenario_clbd_defended.json  gtsrb_scenario_poison.json  kitti.json  librispeech_asr_entailment.json  librispeech_asr_imperceptible_defended.json  (+72 more)
scripts/: format_json.py
tests/: conftest.py  jupyter_manual_test.ipynb  supported_datasets.py  test_art.crap  test_config_verification.py  test_configuration.py  test_crap.py  test_dataset.py  test_datasets.py  test_docker.py  test_docker_management.py  test_downloads.py  test_external_repo.py  test_jupyter.py  test_models.py  test_paths.py  test_supported_datasets.py
tools/: 100-yamllint.sh.disabled  30-json.sh  build.sh  download_all_data.py  format_json.py  pre-commit.sh  requirements-scanner.py  run_scenario_configs.sh  trigger-release.sh  update_config_version.py
website/: _config.yml  index.md
(+946 files in other folders)
