# interestingly, https://github.com/pypa/setuptools uses setup.cfg so perhaps that's
# more trusted than pyproject.toml?  Well, it actually works, which is a plus.

[metadata]
name = armory-testbed
version = 1.0.0
author = Two Six Armory Team
author_email = armory@twoixtech.com
description = new launcher
url = https://github.com/twosixlabs/armory
classifiers =
	Development Status :: 3 - Alpha
	Intended Audience :: Developers
	Intended Audience :: Education
	Intended Audience :: Science/Research
	License :: OSI Approved :: MIT License
	Programming Language :: Python :: 3 :: Only
	Topic :: Software Development :: Libraries :: Python Modules
keywords = adversarial machine learning
project_urls =
	Documentation = https://armory.readthedocs.io/en/latest/

[options]
packages = find_namespace:
# disabled as it causes tests to be included #2505
# include_package_data = true
python_requires = >=3.7
include_package_data = true

install_requires =
    loguru
    docker
    jsonschema
    requests
    pytest

[options.extras_require]
all =
    %(platform)s
    %(torch)s
    %(tensorflow)s

platform =
    %(art)s
    %(maths)s
    %(utils)s

torch =
    %(platform)s
    torch==1.10.*
    torchvision==0.11.*
    torchaudio==0.10.*

deepspeech =
    pytorch-lightning==1.4.*
    python-levenshtein
    hydra-core
    google-cloud-storage
    sox

tensorflow =
    %(platform)s
    tensorflow==2.8.0
    tensorflow-datasets==4.5.*
    tensorboardx==2.4.*

art =
    adversarial-robustness-toolbox==1.10.0

maths =
    numpy==1.21.*
    scipy==1.7.*
    matplotlib==3.*
    jupyterlab==3.*

utils =
    Pillow==9.0.*
    boto3==1.20.* # needed for armory.data.utils
    ffmpeg-python==0.2.0 # needed for armory.utils.export
    opencv-python==4.5.5.62 # Needed for CARLA

dataset =
    apache-beam==2.22.0
    pydub==0.24.1


[options.entry_points]
console_scripts =
    tiga = launcher.cli:cli
    engine = armory.__main__:main


[sdist]
formats = zip
